--- a/languages/delivery-times-for-woocommerce-es_ES.po
+++ b/languages/delivery-times-for-woocommerce-es_ES.po
@@ -1,13 +1,15 @@
 msgid ""
 msgstr ""
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Project-Id-Version: Delivery Times for WooCommerce\n"
-"POT-Creation-Date: 2021-01-04 21:05-0500\n"
-"PO-Revision-Date: 2021-01-04 21:13-0500\n"
+"POT-Creation-Date: 2021-01-09 10:05-0500\n"
+"PO-Revision-Date: 2021-01-09 10:05-0500\n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 2.4.2\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
@@ -16,8 +18,6 @@ msgstr ""
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
 "esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
-"Last-Translator: \n"
-"Language: es\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.min.js\n"
 
@@ -42,6 +42,10 @@ msgstr "Tiempos de entrega"
 #: admin/class-dtwc-admin-settings.php:740
 msgid "Brought to you by"
 msgstr "Presentado por"
+
+#: admin/class-dtwc-admin-settings.php:740
+msgid "Documentation"
+msgstr "Documentación"
 
 #: admin/dtwc-admin-settings.php:70
 msgid "Basic Settings"
